--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3|^8.1",
         "ext-exif": "*",
         "ext-gd": "*",
         "barryvdh/laravel-debugbar": "^3.2",
