--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "postcss-import": "^12.0.1",
     "react": "^17.0.1",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
     "react-use": "^13.27.1",
