--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sentry/browser": "^5.30.0",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
     "classnames": "^2.2.6",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
@@ -25,6 +26,7 @@
     "postcss-import": "^12.0.1",
     "react": "^17.0.1",
     "react-barcode-reader": "^0.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
     "react-use": "^13.27.1",
