--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@inertiajs/inertia": "^0.8.5",
     "@inertiajs/inertia-react": "^0.5.4",
     "@inertiajs/progress": "^0.2.4",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@sentry/browser": "^5.30.0",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
