--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@inertiajs/progress": "^0.2.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@progress/kendo-drawing": "^1.11.0",
+    "@progress/kendo-licensing": "^1.2.0",
+    "@progress/kendo-react-pdf": "^4.8.0",
+    "@progress/kendo-theme-default": "^4.41.0",
     "@sentry/browser": "^5.30.0",
     "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
