--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@inertiajs/progress": "^0.2.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.4",
     "@progress/kendo-drawing": "^1.11.0",
     "@progress/kendo-licensing": "^1.2.0",
     "@progress/kendo-react-pdf": "^4.8.0",
@@ -29,12 +30,14 @@
     "eslint": "^6.8.0",
     "laravel-mix": "^6.0.28",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "postcss-import": "^12.0.1",
     "react": "^17.0.2",
     "react-barcode-reader": "^0.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.14.3",
     "react-use": "^13.27.1",
     "resolve-url-loader": "^3.1.4",
     "tailwindcss": "^2.2.7"
