--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
+        "league/flysystem-aws-s3-v3": "1.0",
         "league/glide": "2.0.x-dev",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
